<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="appDTO"
            type="com.github.moritzhst.blitzi.model.AppDTO" />

        <variable
            name="sanctionDTO"
            type="com.github.moritzhst.blitzi.model.SanctionDTO"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/label_currentSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/akt_geschwindigkeit"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/currentSpeed"/>

        <TextView
            android:id="@+id/label_allowedSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erl_geschwindigkeit"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentSpeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/allowedSpeed"/>


        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(safeUnbox(appDTO.currentSpeed))}"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/label_allowedSpeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_currentSpeed" />

        <TextView
            android:id="@+id/allowedSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(safeUnbox(appDTO.allowedSpeed))}"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_allowedSpeed" />


        <TextView
            android:id="@+id/label_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bu_geld"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/allowedSpeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/money"/>


        <TextView
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/label_points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_money" />

        <TextView
            android:id="@+id/label_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punkte"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/money"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/drivingBan"/>


        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/label_drivingBan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_points" />

        <TextView
            android:id="@+id/label_drivingBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fahrverbot"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/points"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/drivingBan"/>


        <TextView
            android:id="@+id/drivingBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/label_drivingBan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>